--- a/src/components/mainLayout/mainLayout.css
+++ b/src/components/mainLayout/mainLayout.css
@@ -2,9 +2,12 @@
     position: absolute;
     top: 23px;
     left: 18%;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     height: 70%;
     width: 53%;
+    border-style: solid;
+    border: 0.1%;
+    border-color: black;
 }
 .playButton{
     position: absolute;
