--- a/src/components/mainLayout/mainLayout.css
+++ b/src/components/mainLayout/mainLayout.css
@@ -7,7 +7,7 @@
     width: 52.8%;
     border-style: solid;
     border: 0.1%;
-    border-color: black;
+    border-color: #646464;
 }
 .playButton{
     position: absolute;
