--- a/src/components/matrixChart/MatrixChart.css
+++ b/src/components/matrixChart/MatrixChart.css
@@ -4,8 +4,8 @@
     left: 71.2%;
     /* background-color: aquamarine; */
     height: 35%;
-    width: 28.2%;
+    width: 28.3%;
     border-style: solid;
     border: 0.1%;
-    border-color: black;
+    border-color: #646464;
 }
