--- a/src/components/SortedChart/SortedChart.css
+++ b/src/components/SortedChart/SortedChart.css
@@ -1,10 +1,10 @@
-#sortedChart{
+#sorted{
     position: absolute;
     top: 72.4%;
     left: 0.2%;
     /* background-color: aquamarine; */
-    height: 27%;
-    width: 99.3%;
+    height: 27% !important;
+    width: 99.3% !important;
     border-style: solid;
     border: 0.1%;
     border-color: #646464;
