--- a/src/components/matrixChart/MatrixChart.css
+++ b/src/components/matrixChart/MatrixChart.css
@@ -1,11 +1,23 @@
-.matrixChart{
+#matrixChart {
     position: absolute;
     top: 36.8%;
     left: 71.2%;
     /* background-color: aquamarine; */
     height: 34.95%;
-    width: 28.3%;
+    width: 28.3% !important;
     border-style: solid;
     border: 0.1%;
     border-color: #646464;
+}
+
+#matrixChartGraph {
+    position: absolute;
+    /* top: 36.8%; */
+    /* left: 71.2%; */
+    /* background-color: aquamarine; */
+    height: 99%;
+    width: 99% !important;
+    /* border-style: solid; */
+    /* border: 0.1%; */
+    /* border-color: #646464; */
 }
