--- a/src/components/SortedChart/SortedChart.css
+++ b/src/components/SortedChart/SortedChart.css
@@ -3,7 +3,7 @@
     top: 72.4%;
     left: 0.2%;
     /* background-color: aquamarine; */
-    height: 27% !important; 
+    height: 27% ; 
     width: 99.3% !important;
     
     border-style: solid;
