--- a/src/components/SortedChart/SortedChart.css
+++ b/src/components/SortedChart/SortedChart.css
@@ -1,10 +1,10 @@
 #sorted{
     position: absolute;
     top: 72.4%;
-    left: 0.2%;
+    left: 18%;
     /* background-color: aquamarine; */
-    height: 27% ; 
-    width: 99.3% !important;
+    height: 27% !important; 
+    width: 81.5% !important;
     
     border-style: solid;
     border: 0.1%;
