--- a/src/components/SortedChart/SortedChart.css
+++ b/src/components/SortedChart/SortedChart.css
@@ -3,8 +3,8 @@
     top: 72.4%;
     left: 18%;
     /* background-color: aquamarine; */
-    height: 27% !important; 
-    width: 81.5% !important;
+    height: 27% ; 
+    width: 81.5% ;
     
     border-style: solid;
     border: 0.1%;
