--- a/src/components/smallHACChart/SmallHACChart.css
+++ b/src/components/smallHACChart/SmallHACChart.css
@@ -16,9 +16,13 @@
     fill-opacity: 0.5;
     stroke: #B2DF8A;
 }
-/* .node {
+.nodeA {
     fill: #3c1883;
     fill-opacity: 0.5;
     stroke: white;
     stroke-opacity: 0.8;
-} */
+}
+.linkA {
+    stroke-width: 2px;
+    stroke: #82c4c0;
+}
