--- a/src/components/matrixChart/MatrixChart.css
+++ b/src/components/matrixChart/MatrixChart.css
@@ -3,8 +3,8 @@
     top: 36.8%;
     left: 71.2%;
     /* background-color: aquamarine; */
-    height: 34.95% !important;
-    width: 28.3% !important;
+    height: 34.95% ;
+    width: 28.3% ;
     border-style: solid;
     border: 0.1%;
     border-color: #646464;
