--- a/src/components/matrixChart/MatrixChart.css
+++ b/src/components/matrixChart/MatrixChart.css
@@ -1,10 +1,10 @@
 #matrixChart {
     position: absolute;
-    top: 36.8%;
-    left: 71.2%;
+    top: 62%;
+    left: 77.5%;
     /* background-color: aquamarine; */
-    height: 34.95% ;
-    width: 28.3% ;
+    height: 37.3% !important ;
+    width: 22% !important;
     border-style: solid;
     border: 0.1%;
     border-color: #646464;
