--- a/src/components/SortedChart/SortedChart.css
+++ b/src/components/SortedChart/SortedChart.css
@@ -1,10 +1,21 @@
-#sorted{
+/* #sorted{
     position: absolute;
     top: 72.4%;
     left: 18%;
-    /* background-color: aquamarine; */
-    height: 27% ; 
-    width: 81.5% ;
+    height: 27% !important; 
+    width: 81.5% !important;
+    
+    border-style: solid;
+    border: 0.1%;
+    border-color: #646464;
+} */
+
+#sorted{
+    position: absolute;
+    top: 23px;
+    left: 18%;
+    height: 60% !important; 
+    width: 81.5% !important;
     
     border-style: solid;
     border: 0.1%;
